// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reference Traverser - Property keys returns reference for a single key 1`] = `
Array [
  Object {
    "rule": "PropertyKeyNameContext",
    "start": Object {
      "column": 9,
      "line": 1,
    },
    "stop": Object {
      "column": 11,
      "line": 1,
    },
    "text": "key",
  },
]
`;

exports[`Reference Traverser - Property keys returns reference for multiple keys 1`] = `
Array [
  Object {
    "rule": "PropertyKeyNameContext",
    "start": Object {
      "column": 10,
      "line": 1,
    },
    "stop": Object {
      "column": 12,
      "line": 1,
    },
    "text": "key",
  },
  Object {
    "rule": "PropertyKeyNameContext",
    "start": Object {
      "column": 26,
      "line": 1,
    },
    "stop": Object {
      "column": 28,
      "line": 1,
    },
    "text": "key",
  },
  Object {
    "rule": "PropertyKeyNameContext",
    "start": Object {
      "column": 43,
      "line": 1,
    },
    "stop": Object {
      "column": 45,
      "line": 1,
    },
    "text": "key",
  },
]
`;

exports[`Reference Traverser - Property keys returns references for multiple queries 1`] = `
Array [
  Object {
    "rule": "PropertyKeyNameContext",
    "start": Object {
      "column": 10,
      "line": 1,
    },
    "stop": Object {
      "column": 12,
      "line": 1,
    },
    "text": "key",
  },
  Object {
    "rule": "PropertyKeyNameContext",
    "start": Object {
      "column": 36,
      "line": 2,
    },
    "stop": Object {
      "column": 38,
      "line": 2,
    },
    "text": "key",
  },
  Object {
    "rule": "PropertyKeyNameContext",
    "start": Object {
      "column": 64,
      "line": 3,
    },
    "stop": Object {
      "column": 66,
      "line": 3,
    },
    "text": "key",
  },
  Object {
    "rule": "PropertyKeyNameContext",
    "start": Object {
      "column": 89,
      "line": 4,
    },
    "stop": Object {
      "column": 91,
      "line": 4,
    },
    "text": "key",
  },
  Object {
    "rule": "PropertyKeyNameContext",
    "start": Object {
      "column": 115,
      "line": 5,
    },
    "stop": Object {
      "column": 117,
      "line": 5,
    },
    "text": "key",
  },
  Object {
    "rule": "PropertyKeyNameContext",
    "start": Object {
      "column": 143,
      "line": 6,
    },
    "stop": Object {
      "column": 145,
      "line": 6,
    },
    "text": "key",
  },
]
`;
